--- a/sfpopos/src/Title.css
+++ b/sfpopos/src/Title.css
@@ -5,7 +5,7 @@
   justify-content: center;
   padding: 1em;
   margin-bottom: 2em;
-  background-color: #5c6e91;
+  background-color: #495464;
   color: #fff;
   font-family: Verdana;
 }
