--- a/sfpopos/src/Title.css
+++ b/sfpopos/src/Title.css
@@ -13,3 +13,14 @@
   color: whitesmoke;
   font-family: 'Helvetica Neue';
 }
+.nav-link {
+  display: inline-block;
+  padding: 0.5em 1em;
+  color: rgba(255, 255, 255, 0.835);
+  font-weight: bold;
+  text-decoration: none;
+}
+.nav-link-active {
+  color: #fff;
+  border-bottom: 2px solid;
+}
