--- a/sfpopos/src/components/POPOSList.css
+++ b/sfpopos/src/components/POPOSList.css
@@ -6,3 +6,9 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 40px;
 }
+/* Small screens mobile */
+@media only screen and (max-width: 700px) {
+  .POPOSList {
+    grid-template-columns: 1fr;
+  }
+}
