--- a/sfpopos/src/components/POPOSSpace.css
+++ b/sfpopos/src/components/POPOSSpace.css
@@ -1,6 +1,7 @@
 .POPOSSpace {
   width: 100%;
   text-align: center;
+  position: relative;
 }
 
 .POPOSSpace > img {
@@ -11,10 +12,37 @@
 }
 
 h1 {
-  font-size: 25px;
+  font-size: 20px;
 }
-img {
-  height: auto;
-  border: solid 2px black;
+.POPOSSpace-title {
+  position: relative;
+}
+.POPOSSpace .POPOSSpace-title {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.POPOSSpace h1 {
+  margin: 0;
+  font-weight: lighter;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 0.5rem;
+  text-align: left;
   border-radius: 3px;
+}
+
+.POPOSSpace .info {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  text-align: right;
+}
+
+.POPOSSpace .info div {
+  display: inline-block;
+  font-size: 15px;
+  padding: 0.25em 0.5em;
+  background-color: rgba(255, 255, 255, 0.9);
 }
