--- a/sfpopos/src/components/POPOSSpace.css
+++ b/sfpopos/src/components/POPOSSpace.css
@@ -14,6 +14,9 @@
 h1 {
   font-size: 20px;
 }
+img {
+  border-radius: 3px;
+}
 .POPOSSpace-title {
   position: relative;
 }
@@ -45,4 +48,5 @@ h1 {
   font-size: 15px;
   padding: 0.25em 0.5em;
   background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 3px;
 }
